@@ -1,6 +1,7 @@
 package datawave.query;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.ByteBuffer;
 import java.util.Collection;
 import java.util.Iterator;
@@ -86,10 +87,14 @@ public class RebuildingScannerTestHelper {
 
         public InterruptListener instance() {
             try {
-                return iclass.newInstance();
+                return iclass.getDeclaredConstructor().newInstance();
             } catch (IllegalAccessException e) {
                 throw new RuntimeException(e);
             } catch (InstantiationException e) {
+                throw new RuntimeException(e);
+            } catch (InvocationTargetException e) {
+                throw new RuntimeException(e);
+            } catch (NoSuchMethodException e) {
                 throw new RuntimeException(e);
             }
         }
